--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
 .Banner{
-    background-color: rgb(223, 223, 170);
+    background-color: rgb(230, 212, 245);
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 130px;
+}
+h1{
+    font-size: 80px;
+    color: #d17ef1;
+    
 }
 .Lista{
     list-style: none;
     display: flex;
     flex-direction: row;
     gap: 15px;
-
+}
+ul{
+    font-size: 20px;
 }
 .Lista1{
     background-color: pink;
     width: 150px;
 }
 .Principal{
-    background-color: aquamarine;
-    width: 1300px;
+    background-color: rgb(248, 247, 188);
+    width: 1800px;
     height: 800px;
     border: solid 5px white;
+    text-align: center;
 }
 .Tudo{
     display: flex;
@@ -28,4 +36,8 @@
 .Menu{
     background-color: pink;
     border: solid 5px white;
+}
+h2{
+    color: rgb(117, 188, 235);
+    font-size: 50px;
 }
