--- a/styleII.css
+++ b/styleII.css
@@ -1,9 +1,15 @@
 body{
     background-image: linear-gradient(to bottom right, rgb(247, 181, 96), rgb(246, 255, 113));
-    width:400px;
-    height: 800px;
-    font-size:x-large;
+    width:280px;
+    height: 499px;
+    font-size:40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:white;
     display: flex;
-    
+    margin-bottom: 50px; 
+    margin-left: 30px;
+    margin-top: 20px;
+}
+.img{
+    margin-right:150px ;
 }
