--- a/styleII.css
+++ b/styleII.css
@@ -1,47 +1,51 @@
-@media screen and (max-width: 400px){
-body{
-    background-image: linear-gradient(to bottom right, rgb(247, 181, 96), rgb(248, 233, 93));
-    width: 294px;
-    height: 616px;
-    display: flex;
-    justify-content: center;
+@media screen and (max-width: 400px) {
+
+    body {
+        background-image: linear-gradient(to bottom right, rgb(250, 156, 34), rgb(248, 233, 93));
+        width: 294px;
+        height: 616px;
+        display: flex;
+        justify-content: center;
+    }
     
-}
-h1{
-    text-align: center;
-    font-size:40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:white;
-    margin: 0px;
-}
-.img{
-    display: flex;
-    width: 195px ;
-    height: 241px;
+    h1 {
+        text-align: center;
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: white;
+        margin: 0;
+    }
     
-}
-p{
-    text-align: center;
-    color: white;
-    font-size:x-large;
-}
-input{
-    background-color: antiquewhite;
-    color:black;
-    border-radius: 10px;
-    height: 50px;
-    width: 150px;
-    font-size: larger;
+    .img {
+        display: flex;
+        width: 195px;
+        height: 241px;
+    }
     
-}
-p2{
-    font-size: 15px;
-    color: white;
-    margin: 0px;
-}
-h2{
-    font-size: 90px;
-    color: white;
-    margin: 0px;
-}
+    p {
+        text-align: center;
+        color: white;
+        font-size: x-large;
+    }
+    
+    input {
+        background-color: rgb(255, 255, 255);
+        color: black;
+        border-radius: 50px;
+        height: 50px;
+        width: 200px;
+        font-size: larger;
+    }
+    
+    p.p2 {
+        font-size: 15px;
+        color: white;
+        margin: 0;
+    }
+    
+    h2 {
+        font-size: 90px;
+        color: white;
+        margin: 0;
+    }
 }
