--- a/stylef.css
+++ b/stylef.css
@@ -35,6 +35,9 @@
         flex-direction: column;
         justify-content: center;
     }
+    p{
+        display: none;
+    }
 }
 
 @media  screen and (min-width:323px) and (max-width:600px) {
@@ -84,7 +87,9 @@
         display: flex;
     
     }        
-    
+    p{
+        display: none;
+    }
 
     
 }
@@ -110,20 +115,21 @@
         
     }
     .div1{
-        width: 100%;
+        width: 24%;
         height: 190px;
         background-color: rgb(86, 112, 184);
         margin: 5px;
+        margin-left: 131px;
 
     }
     .div2{
-        width: 100%;
+        width: 33%;
         height: 190px;
         background-color: rgb(86, 112, 184);
         margin: 5px;
     }
     .div3{
-        width: 100%;
+        width: 33%;
         height: 190px;
         background-color: rgb(86, 112, 184);
         margin: 5px;
@@ -134,6 +140,15 @@
     }
     .divs{
         display: flex;
+        height: 198px;
+        width: 629.367px;
+        border-right-width: 0px;
+        border-right-style: solid ;
+        margin-right: 0px;
+    }
+    p{
+        color: rgb(61, 80, 133);
+        
     }
     
 
