--- a/stylef.css
+++ b/stylef.css
@@ -41,6 +41,7 @@
     img{
         width: 305px;
         height: 100px;
+        background-attachment: fixed;
     }
 }
 
@@ -57,6 +58,7 @@
         align-items: start;
         width: 248px;
         height: 149px;
+        background-attachment: fixed;
     }
     button{
         width: 75px;
@@ -111,6 +113,7 @@
     img{
         width: 500px;
         height: 125px;
+        background-attachment: fixed;
     }
     button{
         width: 75px;
