--- a/styleG.css
+++ b/styleG.css
@@ -9,13 +9,16 @@ ul{
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 85px;
+    gap: 130px;
     font-size: 20px;
     color: rgb(5, 1, 48);
     margin-left: 790px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 0px;
 }
 h1{
-    font-size: 60px;
+    font-size: 45px;
     color: rgb(5, 1, 48);
 }
 h3{
@@ -29,6 +32,24 @@ h2{
     color: rgb(5, 1, 48);
     font-size: 15px;
     margin-left: 1000px;
-    margin-top: 121px;
+    margin-top: 23px;
 
+}
+.botao{
+    margin-left: 1415px;
+    margin-top: 20px;
+   
+}
+.b1{
+    background-image: linear-gradient(to bottom right, rgb(88, 55, 55) , rgb(214, 201, 171) );
+    height: 40px;
+    width: 130px;
+    border-color: transparent;
+
+}
+.b2{
+    background-color: transparent;
+    height: 40px;
+    width: 130px;
+    border-color: rgb(88, 55, 55);
 }
